writing makes sense up to (but not including) 4.1.2

--- a/secs/conclusion.tex
+++ b/secs/conclusion.tex
@@ -4,6 +4,7 @@ Without subexample generation we cannot recursively apply our algorithm to creat
 
 With the eventual goal of building a complete program synthesis engine, we will need to integrate the first order function synthesis. While this problem has been investigated in isolation, it is not clear how to efficiently determine if  a set of examples will require a higher order function or a first order function.
 
+\subsection{Optimizations}
 
 \subsection{Related}
 Subexample generation from that other paper\cite{isil} is one example of a (powerful) dismantling procedure.
